[package]
name = "ghd"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
config = { version = "0.15.6", default-features = false, features = ["toml"] }
serde = { version = "1.0.217", features = ["derive"] }
ureq = { version = "2.12.1", features = ["json"] }
rusqlite = "0.33.0"
zip = "2.2.2"
thiserror = "2.0.11"
log = "0.4.25"
env_logger = "0.11.6"
serde_json = "1.0.137"
tar = "0.4.43"
flate2 = "1.0.35"
